The Dark knight

--- a/plot.html
+++ b/plot.html
@@ -34,22 +34,27 @@ body{
 
 #title{
   font-family: Bebas Neue;
-  font-size: 80px;
+  font-size: 6vw;
 }
 .plot,#america,#time{
   font-family:-윤고딕330; 
   font-size: 20px;
 
 }
-
+.averageimg img{
+ max-width: 100%;
+         height: auto;
+         
+}
 .average{
   font-family:-윤고딕330; 
-  font-size: 20px;
+  font-size: 2vw;
 }
 
 .plot{
   margin-top:70px;
   max-width: 1300px;
+  font-size: 2vw;
 }
 
 table{
