--- a/start.html
+++ b/start.html
@@ -49,7 +49,7 @@ a {
   width:auto;
   height:48px;
   display: inline-block;
-
+ font-size: 5vw;
   margin: 0;
   }
 
@@ -57,7 +57,7 @@ a {
 
   .link {
   position: absolute;
-  left:30%;
+  left:20%;
   top:50%;
   text-align: center;
    
@@ -85,7 +85,7 @@ a {
  
   <a class="plot" href="plot.html">Plot</a>
 
-  <a class="photo" href="photo.html">Photo & Video</a>
+  <a class="photo" href="photo.html">Photo </a>
   </div>
   
 </body>
