--- a/character.html
+++ b/character.html
@@ -10,15 +10,19 @@
 		margin: 0%;
 		background-color: black;
 	}
-	img{
+	
+	         @media screen and (min-width:641px){
+            img{
+				 width: 30%;
+			}}
+         @media screen and (min-width:361px) and (max-width:640px){
+           img{
+				 width: 300px;
+			}
+            }
+            @media screen and (max-width: 360px){
 
-		 max-width: 100%;
-         height: auto;
-
-	}
-	.joker,.har,.batman{
-		float: left;
-	}
+            } 
 
  
 </style>
