the Dark Knight

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Dark Night</title>
+ <script type="text/javascript">
+function paragraph_onmouseover(){
+  title2.style.color="red";
+}
+function paragraph_onmouseout(){
+  title2.style.color="white";
+}
+
+ </script>
 <style>
 #video_background {
 position: absolute;
@@ -111,7 +120,10 @@ background-color: black;
 </style>
 </head>
 <body>
-<body>
+
+
+
+
   <video id="video_background" preload="auto" autoplay="autoplay" loop="loop" muted="muted" > 
   <source src="thedarkknight.mp4" type="video/webm"> 
   </video>
@@ -121,20 +133,20 @@ background-color: black;
  	</div>
  	
  	<div id="title">
- 	<h1 id ="title2">THE DARK KNIGHT</h1>
+ 	<h1 id ="title2" onmouseover="paragraph_onmouseover()" onmouseout="paragraph_onmouseout()">THE DARK KNIGHT</h1>
  	</div>
  	
  	<div>
- 	<a href="start.html"><img id = "bat" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="bat"></a>
+ 	<a href="start.html"><img id = "bat" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt2"></a>
  	</div>
  	
  	<div class="footer">
  	<p>
-	<span><img class="foo" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="bat"></span>
+	<span><img class="foo" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt3"></span>
 
  	<span class="foot">Kang Ye Lim</span><span class="foot">The Dark Knight</span><span class="foot">2008.08.06</span><span class="foot">Christopher Johnathan James Nolan</span><span class="foot" >Bae Sung Woo</span>
 	
-	<span><img class="foo" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="bat"></span>
+	<span><img class="foo" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt4"></span>
  	</p>
  	</div>
 
