--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Dark Night</title>
  <script type="text/javascript">
+
+
 function paragraph_onmouseover(){
   title2.style.color="red";
 }
 function paragraph_onmouseout(){
   title2.style.color="white";
 }
+
+
 
  </script>
 <style>
@@ -137,9 +141,9 @@ background-color: black;
  	</div>
  	
  	<div>
- 	<a href="start.html"><img id = "bat" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt2"></a>
+ 	<a href="start.html"><img  id = "bat" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt2"></a>
  	</div>
- 	
+
  	<div class="footer">
  	<p>
 	<span><img class="foo" src="dark_knight_logo_by_gamnamno-d6myhnn.png" alt="batt3"></span>
@@ -150,6 +154,41 @@ background-color: black;
  	</p>
  	</div>
 
+<img id="img1" style="position:absolute; left:0; top:0;" src="Batman_Logo.png">
+<script language="JavaScript">
+<!--
+     // 마우스 커서 위치 담을 변수
+     var mouseX = 0;
+     var mouseY = 0; 
 
+     function getMousePosition(e){
+          var eObj = window.event? window.event : e; // IE, FF 에 따라 이벤트 처리 하기
+          mouseX = eObj.clientX;
+          mouseY = eObj.clientY + document.body.scrollTop; // 화면을 스크롤 했을때를 위한 처리 (스크롤 한 만큼 마우스 Y좌표에 + )
+     }
+
+     function moveImg(){
+          // 이미지 위치 파악하기
+          var m_x = parseInt(document.getElementById('img1').style.left.replace('px', ''));
+          var m_y = parseInt(document.getElementById('img1').style.top.replace('px', ''));
+
+          // 이미지 움직이기
+          document.getElementById('img1').style.left = Math.round(m_x + ((mouseX - m_x) / 5))+'px';
+          document.getElementById('img1').style.top = Math.round(m_y + ((mouseY - m_y) / 1))+'px';
+          
+
+          // 부드럽게 따라오는 공식 대략..
+          // 현재 이미지위치 = 현재이미지 위치 + (이미지 위치기준 마우스 커서 위치 / 적절한 나누기 값)
+          // 반복 처리 해주면 됩니다.
+          
+          // ※ 이미지 위치 기준 마우스 커서 위치란?
+          // 이미지를 기준으로 그 이미지에서 커서가 얼마나 떨어져 있는지 여부
+     }
+
+     document.onmousemove = getMousePosition; // 마우스가 움직이면 getMousePosition 함수 실행
+     setInterval("moveImg()", 8); // moveImg 함수 반복 실행하여 이미지 움직이기
+
+//-->
+</script>
 </body>
 </html>
