--- a/character.html
+++ b/character.html
@@ -82,9 +82,9 @@
         width: 33%;
               }
 
-              #jo_ppp{
+             #jo_ppp{
         position: absolute;
-        width: 33.3%;
+        width: 33.3%; 
         top:70%;
         left:-5%;
               }
@@ -170,9 +170,95 @@
               img{
          width: 300px;
       }
-            } 
+            }
+@media print{
+  img{
+    width: 33%;
+    height: 100%;
+  }
+  .type{
+    font-size: 40px;
+    font-family: Bebas Neue;
+    color:white;
+    top:-20%;
 
- 
+  }
+  .typee{
+    font-size: 20px;
+    font-family: Bebas Neue;
+    color:#72151f;
+    text-align: right;
+    
+  }
+    .typeee{
+    font-size: 15px;
+    font-family: -흔적L;
+    color:#72151f;
+    text-align: right;
+    
+  }
+
+  .box{
+    float: left;
+  }
+  #jo_p{
+        position: absolute;
+        width: 33.3%;
+        top:0%;
+        left:2%;
+              }
+              #ba_p{
+        position: absolute;
+        left: 33.3%;
+        top:0%;
+        width: 33.3%;
+              }
+              #ha_p{
+        position: absolute;
+        left: 66.6%;
+        top:0%;
+        width: 33.3%;
+              }
+
+                     #jo_pp{
+        position: absolute;
+        width: 33.3%;
+        top:55%;
+        left:-5%;
+              }
+              #ba_pp{
+        position: absolute;
+        left: 30%;
+        top:45%;
+        width: 33%;
+              }
+              #ha_pp{
+        position: absolute;
+        left: 63%;
+        top:45%;
+        width: 33%;
+              }
+
+             #jo_ppp{
+        position: absolute;
+        width: 33.3%; 
+        top:70%;
+        left:-5%;
+              }
+              #ba_ppp{
+        position: absolute;
+        left: 35%;
+        top:70%;
+        width: 28%;
+              }
+              #ha_ppp{
+        position: absolute;
+        left: 63%;
+        top:70%;
+        width: 33%;
+              }
+}
+  
 </style>
 <body>
   <img src="joker.jpg" alt="joker" class="joker">
