--- a/start.html
+++ b/start.html
@@ -5,13 +5,7 @@
   <title>start</title>
 
   <style>
-  body{
- font-family: 'Bebas Neue';
-  background-color: black;
-  margin: 0;
-}
-
-#video_background {
+  #video_background {
 position: absolute;
 bottom: 0px;
 right: 0px;
@@ -19,7 +13,16 @@ min-width: 100%;
 min-height: 100%;
 width: auto;
 height: auto;
+}         
+
+
+
+  body{
+  background-color: black;
+  margin: 0;
 }
+
+
 .opacity{
   width:auto;
   height:auto;
@@ -27,31 +30,26 @@ height: auto;
   min-height: 100%;
   left: 0px;
   top: 0px;
-  opacity: 0.35;
-  background-opacity: 50;
+  opacity: 0.1;
   position: absolute;
   background:black;
 }
 
 
 
-
-
-a {
-  text-decoration: none;
-}
-
   .link a {
   padding: 0 30px;
-  font-size: 45px;
-  font-weight: 300;
-  color:white;
+  margin: 0;
   width:auto;
   height:48px;
   display: inline-block;
+  font-weight: 300;
+  color:white;
  font-size: 5vw;
-  margin: 0;
-  }
+  font-family: Bebas Neue, sans-serif;
+   position: center;
+  text-decoration: none;
+ } 
 
 
 
@@ -60,34 +58,69 @@ a {
   left:20%;
   top:50%;
   text-align: center;
-   
-  
+   }
+
+ @media print {
 
 
-   
-  }
+         
 
+              #jok {width: auto;
+                height:auto;
+                }
+
+                video{display: none;}  
+
+                .link a {
+                  padding: 0 30px;
+                  margin: 0;
+                  width:auto;
+                  height:48px;
+                  display: inline-block;
+                  font-weight: 300;
+                  color:white;
+                  font-size: 50px;
+                  font-family: Bebas Neue, sans-serif;
+                   position: center;
+                  text-decoration: none;
+                 } 
+
+
+
+                  .link {
+                  position: absolute;
+                  left:15%;
+                  top:47%;
+                  text-align: center;
+                   }
+
+            }
   </style>
+
 </head>
 <body>
-  <video id="video_background" preload="auto" autoplay="autoplay" loop="loop" muted="muted" > 
+  <video id="video_background" preload="auto" autoplay="auto play" loop="loop" muted="muted" >
   <source src="JokerScene.mp4" type="video/webm"> 
   </video>
+<img class="jok" src="jok.jpg" alt="jok">
+
+
   <div class="opacity">
   </div>
 
 
 
   <div class="link">
-  <a class="start" href="index.html">Start</a>
+  <p>
+    <a class="start" href="index.html">Start</a>
 
    <a class="character" href="character.html">Character</a>
  
   <a class="plot" href="plot.html">Plot</a>
 
   <a class="photo" href="photo.html">Photo </a>
+</p>
   </div>
   
 </body>
 </html>
-
